--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<script src="https://gemmi.github.io/cloudlink/hwh5.js"></script>
-<script src="https://gemmi.github.io/cloudlink/app.js"></script>
+<html>
+    <title>验证API</title>>
+    <script src="https://gemmi.github.io/cloudlink/hwh5.js"></script>
+    <script src="https://gemmi.github.io/cloudlink/app.js"></script>
+<html>
